--- a/app/src/main/res/navigation/main_activity_nav_graph.xml
+++ b/app/src/main/res/navigation/main_activity_nav_graph.xml
@@ -4,70 +4,71 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_activity_nav_graph"
-    app:startDestination="@id/main_activity_home_fragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/main_activity_home_fragment"
+        android:id="@+id/homeFragment"
         android:name="hochschule.de.bachelorthesis.view.fragments.mainActivity.HomeFragment"
-        android:label="Home"
+        android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
-        android:id="@+id/main_activity_food_fragment"
+        android:id="@+id/foodFragment"
         android:name="hochschule.de.bachelorthesis.view.fragments.mainActivity.FoodFragment"
-        android:label="Foods">
+        android:label="fragment_food"
+        tools:layout="@layout/fragment_food" >
         <action
-            android:id="@+id/action_main_activity_food_fragment_to_foodAddFragment"
-            app:destination="@id/foodAddFragment" />
+            android:id="@+id/action_foodFragment_to_addFood"
+            app:destination="@id/addFood" />
         <action
-            android:id="@+id/action_main_activity_food_fragment_to_foodInfoFragment"
+            android:id="@+id/action_foodFragment_to_foodInfoFragment"
             app:destination="@id/foodInfoFragment" />
     </fragment>
+
     <fragment
-        android:id="@+id/main_activity_me_fragment"
-        android:name="hochschule.de.bachelorthesis.view.fragments.mainActivity.MeFragment"
-        android:label="User data"
-        tools:layout="@layout/fragment_me">
-        <action
-            android:id="@+id/action_main_activity_me_fragment_to_meEditFragment"
-            app:destination="@id/meEditFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/main_activity_graphs_fragment"
-        android:name="hochschule.de.bachelorthesis.view.fragments.mainActivity.GraphsFragment"
-        android:label="Graphs"
-        tools:layout="@layout/fragment_graphs" />
-    <fragment
-        android:id="@+id/meEditFragment"
-        android:name="hochschule.de.bachelorthesis.view.fragments.mainActivity.MeEditFragment"
-        android:label="Edit User Data"
-        tools:layout="@layout/fragment_me_edit" >
-        <action
-            android:id="@+id/action_meEditFragment_to_main_activity_me_fragment"
-            app:destination="@id/main_activity_me_fragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/foodAddFragment"
-        android:name="hochschule.de.bachelorthesis.view.fragments.food.FoodAddFragment"
+        android:id="@+id/addFood"
+        android:name="hochschule.de.bachelorthesis.view.fragments.foodInfo.AddFood"
         android:label="fragment_food_add"
         tools:layout="@layout/fragment_food_add" />
+
     <fragment
         android:id="@+id/foodInfoFragment"
-        android:name="hochschule.de.bachelorthesis.view.fragments.mainActivity.FoodInfoFragment"
+        android:name="hochschule.de.bachelorthesis.view.fragments.foodInfo.FoodInfoFragment"
         android:label="fragment_food_info"
         tools:layout="@layout/fragment_food_info" >
         <action
-            android:id="@+id/action_foodInfoFragment_to_foodAddMeasurementFragment2"
-            app:destination="@id/foodAddMeasurementFragment2" />
+            android:id="@+id/action_foodInfoFragment_to_addMeasurement"
+            app:destination="@id/addMeasurement" />
     </fragment>
+
     <fragment
-        android:id="@+id/foodMeasurementsFragment"
-        android:name="hochschule.de.bachelorthesis.view.fragments.food.FoodMeasurementsFragment"
-        android:label="fragment_food_measurements"
-        tools:layout="@layout/fragment_food_measurements" />
-    <fragment
-        android:id="@+id/foodAddMeasurementFragment2"
-        android:name="hochschule.de.bachelorthesis.view.fragments.food.FoodAddMeasurementFragment"
+        android:id="@+id/addMeasurement"
+        android:name="hochschule.de.bachelorthesis.view.fragments.foodInfo.AddMeasurement"
         android:label="fragment_add_measurement"
         tools:layout="@layout/fragment_add_measurement" />
 
+    <fragment
+        android:id="@+id/graphsFragment"
+        android:name="hochschule.de.bachelorthesis.view.fragments.mainActivity.GraphsFragment"
+        android:label="fragment_graphs"
+        tools:layout="@layout/fragment_graphs" />
+    <fragment
+        android:id="@+id/meFragment"
+        android:name="hochschule.de.bachelorthesis.view.fragments.mainActivity.MeFragment"
+        android:label="fragment_me"
+        tools:layout="@layout/fragment_me" >
+        <action
+            android:id="@+id/action_meFragment_to_meEditFragment"
+            app:destination="@id/meEditFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/meEditFragment"
+        android:name="hochschule.de.bachelorthesis.view.fragments.mainActivity.MeEditFragment"
+        android:label="fragment_me_edit"
+        tools:layout="@layout/fragment_me_edit" >
+        <action
+            android:id="@+id/action_meEditFragment_to_meFragment"
+            app:destination="@id/meFragment" />
+    </fragment>
+
 </navigation>
+
