--- a/app/src/main/res/layout/fragment_food_add.xml
+++ b/app/src/main/res/layout/fragment_food_add.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="hochschule.de.bachelorthesis.view_model.fragments.FoodAddViewModel" />
+            type="hochschule.de.bachelorthesis.view_model.fragments.AddFoodViewModel" />
     </data>
 
     <ScrollView
