--- a/app/src/main/res/menu/add_food_menu.xml
+++ b/app/src/main/res/menu/add_food_menu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <item
-    android:id="@+id/save_food"
+    android:id="@+id/save"
     android:icon="@drawable/ic_save_white_24dp"
     android:title="@string/save"
     app:showAsAction="ifRoom" />
